# SSM-Construction

./: .gitignore  README  README.md
construct-ssm/: Makefile  README  README.md  construct-ssm.cabal  stack.yaml
construct-ssm/src/: Utils.hs  Z3.hs  main.hs
construct-ssm/src/Elf/: Elf.hs  ReadMachineCode.hs  udis86.c
construct-ssm/src/Predicates/: Base.hs  DataAccess.hs  DynamicMem.hs  Flags.hs  FunctionCallInfo.hs  InvGen.hs  Lattice.hs  Mem.hs  State.hs  Transforms.hs  Z3.hs
construct-ssm/src/X86/: Datastructures.hs  Expr.hs
examples/: Makefile  make.py  parse.py  slim_files.py  so_make.py  so_parse.py
examples/PredicateTransform/foo/: Makefile  foo  foo.c  foo.objdump  foo_opt  foo_opt.objdump
examples/PredicateTransform/indirect/: Makefile  README  callback  callback.c  callback.objdump  function_pointer  function_pointer.c  function_pointer.objdump  goto  goto.c  goto.objdump  objects  objects.c  objects.objdump  switch_input  switch_input.c  switch_input.objdump
examples/PredicateTransform/memcpy/: Makefile  memcpy  memcpy.c  memcpy_opt
examples/contrived/local_array/: Makefile  local_array  local_array.c  local_array.err  local_array.objdump  local_array.out
examples/contrived/overlap/: Makefile  overlap  overlap.c  overlap.err  overlap.objdump  overlap.out
examples/contrived/scanf/: Makefile  scanf  scanf.c  scanf.err  scanf.objdump  scanf.out
examples/contrived/simple_local_array/: Makefile  simple_local_array  simple_local_array.c  simple_local_array.err  simple_local_array.objdump  simple_local_array.out
examples/coreutils/cat/: cat.objdump  cat.out
examples/coreutils/chmod/: chmod.objdump  chmod.out
examples/coreutils/cp/: cp.objdump  cp.out
examples/coreutils/mkfifo/: mkfifo.objdump  mkfifo.out
examples/coreutils/nl/: nl.objdump  nl.out
examples/coreutils/od/: od.objdump  od.out
examples/coreutils/tabs/: tabs.objdump  tabs.out
examples/coreutils/wc/: wc.objdump  wc.out
examples/xen/: parallel  parallel.sh  xen work
examples/xen/debug/: Makefile  xen-syms-4.12.0  xen-syms-4.12.0.err
examples/xen/debugboot/: Makefile  xen-shim-syms.err
examples/xen/fsimage/: results.txt
examples/xen/fsimage/ext2fs-fsimage.so/: Makefile  __do_global_dtors_aux.err  __do_global_dtors_aux.out  _fini.err  _fini.out  _init.err  _init.out  deregister_tm_clones.err  deregister_tm_clones.out  ext2_rdfsb.err  ext2_rdfsb.out  ext2fs_block_map.err  ext2fs_block_map.out  ext2fs_dir.err  ext2fs_mount.err  ext2fs_mount.out  ext2fs_read.err  ext2fs_read.out  frame_dummy.err  frame_dummy.out  fsi_init_plugin.err  fsi_init_plugin.out  register_tm_clones.err  register_tm_clones.out
examples/xen/fsimage/fat-fsimage.so/: Makefile  __do_global_dtors_aux.err  __do_global_dtors_aux.out  _fini.err  _fini.out  _init.err  _init.out  deregister_tm_clones.err  deregister_tm_clones.out  fat_dir.err  fat_dir.out  fat_mount.err  fat_mount.out  fat_read.err  fat_read.out  frame_dummy.err  frame_dummy.out  fsi_init_plugin.err  fsi_init_plugin.out  register_tm_clones.err  register_tm_clones.out
examples/xen/fsimage/iso9660-fsimage.so/: Makefile  __do_global_dtors_aux.err  __do_global_dtors_aux.out  _fini.err  _fini.out  _init.err  _init.out  deregister_tm_clones.err  deregister_tm_clones.out  frame_dummy.err  frame_dummy.out  fsi_init_plugin.err  fsi_init_plugin.out  iso9660_devread.err  iso9660_devread.out  (+8 more)
examples/xen/lib/: results.txt
examples/xen/libexec/: Makefile  qemu-bridge-helper  qemu-bridge-helper.err  qemu-bridge-helper.objdump  qemu-bridge-helper.out
examples/xen/python/: results.txt
isabelle/: README
isabelle/examples/du/: du.calls  du.indirections  du.thy  du_calls.dot
isabelle/examples/gzip/: gzip.calls  gzip.indirections  gzip.thy  gzip_calls.dot
isabelle/examples/hexdump/: hexdump.dump  hexdump.entry  hexdump.objdump  hexdump.thy  hexdump_calls.dot
isabelle/examples/od/: od.calls  od.indirections  od.objdump  od.sections  od.symbols  od.thy  od_calls.dot
isabelle/examples/tar/: tar.calls  tar.indirections  tar.thy  tar_calls.dot
isabelle/examples/wc/: wc.calls  wc.thy  wc_calls.dot
isabelle/isabelle/X86_Semantics/: BitByte.thy  Memory.thy  X86_InstructionSemantics.thy
udis86-modified/docs/x86/: optable.xml
(+4817 files in other folders)
