name:                construct-ssm
version:             2.0.0.0
stability:           research
-- synopsis:
-- description:
homepage:            https://github.com/jabocken/SSM-Construction
license:             Apache-2.0
license-file:        LICENSE
author:              Freek Verbeek, Joshua A. Bockenek
maintainer:          jabocken@vt.edu
copyright:           2020
category:            Formal Verification
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable construct-ssm
  hs-source-dirs:      src
  main-is:             main.hs
  default-language:    Haskell2010
  default-extensions:  PartialTypeSignatures
  other-extensions:    FlexibleContexts, FlexibleInstances
  ghc-options:         -Wno-partial-type-signatures udis86.o
  ghc-prof-options:    -fbreak-on-exception
  extra-lib-dirs:      /usr/local/lib
  extra-libraries:     udis86
  build-depends:       base >= 4.7,
                       containers,
                       extra,
                       bytestring,
                       mtl,
                       multimap,
                       parsec,
                       parsec-numbers,
                       sort,
                       argparser,
                       bitwise,
                       z3,
                       elf,
                       assert,
                       strings
  other-modules:       Predicates.Base,
                       Predicates.DataAccess,
                       Predicates.Flags,
                       Predicates.Lattice,
                       Predicates.Transforms,
                       Predicates.Mem,
                       Predicates.DynamicMem,
                       Predicates.State,
                       Predicates.InvGen,
                       Predicates.Z3,
                       Predicates.FunctionCallInfo,
                       X86.Datastructures,
                       X86.Expr,
                       Utils,
                       Z3,
                       Elf.Elf,
                       Elf.ReadMachineCode
